[package]
name = "webcrawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
hex = "0.4"
futures = "0.3"
reqwest = "0.11"
sha1 = "0.10"
scraper = "0.13"
thiserror = "1"
tokio = { version = "1", features = ["full"]}
tokio-stream = "0.1"
tracing = "0.1"
url = "2.3"
